==== 2.7.0 dev ====
    * Reserved Request.db attribute for usage
    * Right HTTPException type annotation
    * Fix ETag header
    * FieldStorage and FieldStorageParser implementation based on legacy
      cgi.FieldStorage
        - that means Python 3.13 support
    * Stop Python 3.8 support - some mypy annotation didn't work
    * Field refactoring - ! possible break change ! - sorry for that
        - FieldStorageInterface - getvalue, getfist, getlist methods
        - new func converter name, and no default converter
        - all default values are not convert now
    * Some old classes, functions, attributes and parameters are notified
      as deprecated, and will be deleted in next major version.
    * Automatic JSONResponse from dict or list, just like from text.
    * Debug info, documentation and Error improvements.

==== 2.6.3 ====
    * HTTPException has status_code property
    * Implicit value for not set cookie is None or empty dict for OpenAPI
    * Fix Content-Length header when partial Response

==== 2.6.1 ====
    * Fix OpenAPI Core wrappers

==== 2.6.0 ====
    * Running on MS Windows fix
    * UTF-8 HTTP Digest username support
    * JSONResponse support all response type now (data argument)
    * EmptyResponse replaced by NoContentResponse
    * new NotModifiedResponse
    * time_to_http, datetime_to_http, http_to_datetime and http_to_time header
      functions for manipulating Date type headers
    * FileResponse generates Last-Modified header now
    * Response and FileObjResponse can be partial
    * JSONResponse Encoder arguments
    * Generator responses can be partial
    * Special PartialResponse class
    * Fix set_profile method
    * Fix logging messages

==== 2.5.0 ====
    * fix file callback on files smaller than 1000B
    * add FileObjResponse class
    * add BaseResponse class
    * unicode support in url path
    * call file_callback only for files entries (with filename)
    * fix openapi wrapper mime type