@@ -3,8 +3,8 @@
     * Right HTTPException type annotation
     * Fix ETag header
     * FieldStorage and FieldStorageParser implementation based on legacy
-      cgi.FieldStorage
-        - that means Python 3.13 support
+      cgi.FieldStorage (#22 )
+        - that means Python 3.13 support (#36)
     * Stop Python 3.8 support - some mypy annotation didn't work
     * Field refactoring - ! possible break change ! - sorry for that
         - FieldStorageInterface - getvalue, getfist, getlist methods
@@ -14,6 +14,7 @@
       as deprecated, and will be deleted in next major version.
     * Automatic JSONResponse from dict or list, just like from text.
     * Debug info, documentation and Error improvements.
+    * Automatic NoContentResponse from None (#28)
 
 ==== 2.6.3 ====
     * HTTPException has status_code property
